@@ -49,6 +49,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * New hook ArticlePrepareTextForEdit added, called when preparing text to be saved.
 * New parser option PreSaveTransform added, allows the pre-save transformation
   to be selectively disabled.
+* Alternative to $wgHooks implemented, using the new Hooks class. 
 
 === Bug fixes in 1.18 ===
 * (bug 23119) WikiError class and subclasses are now marked as deprecated
